# Anagnorisis

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  config.yml
client/include/: anagnorisis.hpp
client/src/: anagnorisis.cc  run.cc
server/include/: endpoint_mgr.hpp  ping.hpp  record_mgr.hpp  register.hpp  remove.hpp  retrieve.hpp  service.hpp  site_config.hpp  update.hpp
server/include/rapidjson/: _git
server/include/spdlog/: _git
server/src/: endpoint_mgr.cc  ping.cc  record_mgr.cc  register.cc  remove.cc  retrieve.cc  run.cc  service.cc  site_config.cc  update.cc
