cmake_minimum_required(VERSION 3.5)
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_FLAGS "-DTHREADED")
project(anagnorisis CXX)
file (GLOB server_src server/src/*.cc)
file (GLOB lib_src client/src/*.cc)
include_directories(server/include/)
include_directories(client/include/)
include_directories(/usr/local/include/)
add_executable(anagnorisis ${server_src})
add_executable(anagnorisis_test ${lib_src})
target_link_libraries(anagnorisis_test -lcurlpp -lcurl -lpthread) 
target_link_libraries(anagnorisis -lpistache -lpthread -lyaml-cpp) 